<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/input_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputFragment">

    <TextView
        android:id="@+id/input_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_location_label_text"
        app:layout_constraintBottom_toTopOf="@+id/input_location_text"
        app:layout_constraintStart_toStartOf="@+id/input_location_text"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/input_location_text_placeholder"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_location_label" />

    <Button
        android:id="@+id/input_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onButtonClicked"
        android:text="@string/input_location_button_text"
        app:layout_constraintBottom_toBottomOf="@+id/input_location_text"
        app:layout_constraintStart_toEndOf="@+id/input_location_text"
        app:layout_constraintTop_toTopOf="@+id/input_location_text"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>